Fix missing padding before non-review content

--- a/mf_web/volumes/htdocs/sass/elements/std-article.scss
+++ b/mf_web/volumes/htdocs/sass/elements/std-article.scss
@@ -5,7 +5,11 @@
 
         > .content {
             @include vertical-container;
-            padding-bottom: $gap-m;
+            @include vertical-section;
+
+            &.-withintro {
+                padding-top: 0;
+            }
 
             > .section {                
                 > .sectioncontent {
@@ -14,6 +18,7 @@
                     padding-right: $gap-xs;
                 }
             }
+
             > .section.-intro {
                 @include vertical-section;
                 background-color: $color-blue-4;
